# SPDX-FileCopyrightText: Copyright (c) 2023-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = simple_cpp_stage
version = attr: versioneer.get_version
description = Morpheus Example - Pass Thru C++ Stage
author = NVIDIA Corporation
license = Apache
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[versioneer]
VCS = git
style = pep440
versionfile_source = morpheus/_version.py
versionfile_build = morpheus/_version.py
tag_prefix = v
